create authentication middleware and save token in context
