# docs/swagger.json
@@ -53,6 +53,24 @@
                 "operationId": "health",
                 "responses": {}
             }
+        },
+        "/moderated-channels": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get information about the channels you moderate",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Channels"
+                ],
+                "summary": "get channels you moderate",
+                "responses": {}
+            }
         }
     },
     "definitions": {
